--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.gradiant {
+  background-image: linear-gradient(#ebf2fc, #effbf9);
+}
+
+.active {
+  @apply bg-[#c8211a] text-white border-[#c8211a];
+}
